    for relevant tracks.
32. Fix displaying of disc and track numbers for online services.
33. Move sidebar settings into settings dialog.
34. Add new view style "Basic Tree (No Icons)". This is as per the simple tree,
    but only images, and not icons, will be shown.
35. Europe and Canada regions in ListenLive are not re-loadable (as they are
    read from listenlive.xml)

1.2.2
-----
 1. Fix British English translation.
 2. Improve internal HTTP security - only serve files to MPD host, and only
    files in playqueue.
 3. Also remove CDDA files when Cantata exits.
 4. Improve error message if 'playlist_directory' does not exist.
 5. If icon theme does not have network-server, then use audio file icon for
    HTTP server settings page.
 6. Fix truncated files served from internal HTTP server.
 7. When adding songs to an existing play lists, don't allow play list files to
    be added.
 8. If Ctrl-F is activated again whilst search widget is visible, then select
    all current text.
 9. When MPD seeks a Cantata HTTP stream, set the Content-Range header field.
    This fixes seeking of FLAC files.
10. Fix toggling of checkboxes via short-cut.
11. Fix short-cuts in preferences dialog.
12. Don't clear the playqueue when Cantata is passed a song as a commandline at
    start-up.
13. Fix broken spinboxes in some dialogs with Gtk style.
14. Correctly style treeview in CD details dialog.
15. Only show artist name of CD track if it does not start with main CD artist.
16. Show track numbers in CD listing.

1.2.1
-----
1. Only use old Qt DBUS type annotations for Qt less than 4.8.2
2. Use "(c)" instead of "©", as "©" seems to mess up Qt translations.
3. Fix tagtype and URL handler detection. Fixes Composer support, and streams.
4. Use 32x32 for drag'n'drop icon, 64x64 for highdpi.
5. Use audio-x-generic icon for drag'n'drop if no cover found.
6. Fix potential memory leak with cover images.
7. Fix crash when changing online view from list to tree, after a soundcloud