@@ -66,6 +66,28 @@ if (NOT WIN32 AND NOT APPLE AND ENABLE_DEVICES_SUPPORT AND ENABLE_UDISKS2)
     set(WITH_SOLID_UDISKS2 ON)
 endif (NOT WIN32 AND NOT APPLE AND ENABLE_DEVICES_SUPPORT AND ENABLE_UDISKS2)
 
+if (NOT CMAKE_BUILD_TYPE)
+    set(CMAKE_BUILD_TYPE "Release")
+    message("-- Set build type to ${CMAKE_BUILD_TYPE}")
+endif (NOT CMAKE_BUILD_TYPE)
+
+if (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+    if (ENABLE_KDE)
+        find_program(KDE4_KDECONFIG_EXECUTABLE NAMES kde4-config
+                     PATHS ${CMAKE_INSTALL_PREFIX}/bin ${_KDEDIRS} /opt/kde4/bin NO_DEFAULT_PATH)
+        if (NOT KDE4_KDECONFIG_EXECUTABLE)
+           find_program(KDE4_KDECONFIG_EXECUTABLE NAMES kde4-config )
+        endif (NOT KDE4_KDECONFIG_EXECUTABLE)
+        if (KDE4_KDECONFIG_EXECUTABLE)
+            exec_program(${KDE4_KDECONFIG_EXECUTABLE} ARGS --prefix OUTPUT_VARIABLE CMAKE_INSTALL_PREFIX)
+            message("-- Set install prefix to ${CMAKE_INSTALL_PREFIX}")
+        endif (KDE4_KDECONFIG_EXECUTABLE)
+    elseif (NOT APPLE AND NOT WIN32)
+        set(CMAKE_INSTALL_PREFIX "/usr")
+        message("-- Set install prefix to ${CMAKE_INSTALL_PREFIX}")
+    endif (ENABLE_KDE)
+endif (CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
+
 if (ENABLE_TAGLIB)
     set(TAGLIB_MIN_VERSION "1.6")
     find_package(Taglib)
